fixed display of home page on firefox

--- a/css/style.scss
+++ b/css/style.scss
@@ -705,7 +705,6 @@ a:active {
       padding: 1rem;
       transition: all 300ms ease-in-out;
       justify-items: center;
-      align-content: flex-start;
       align-content: space-between;
       z-index: 999998;
       grid-column: 3/8;
@@ -720,7 +719,7 @@ a:active {
       // grid-row-gap: 1rem;
       box-shadow: 0px 0px 25px rgba(13, 13, 13, 0.7);
       &:hover{
-      box-shadow: 0px 0px 50px rgba(13, 13, 13, 0.5);
+        box-shadow: 0px 0px 50px rgba(13, 13, 13, 0.5);
       }
       @media (max-width: 600px) {
         grid-column: span 1;
@@ -758,12 +757,9 @@ a:active {
         text-align: center;
       }
       &-img{
-        display: grid;
+        display: flex;
         grid-template-rows: repeat(4, 1fr);
         grid-row: 1/5;
-        // height: min-content;
-        // object-fit: cover;
-        // align-self: flex-end;
         justify-content: center;
         transition: all 300ms ease-in-out;
         @media (max-width: 600px) {
